# mrs_api

./: .env.example  .flake8  .gitignore  README.md  linting.sh  pyproject.toml  run_dev.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: pylint.yml  pytest.yml
mrs_api/: __init__.py  main.py
mrs_api/api/: router.py
mrs_api/env/: settings.py
mrs_api/lib/: __init__.py
mrs_api/modules/: __init__.py
mrs_api/modules/address/models/: __init__.py  address_model.py  country_model.py  state_model.py
mrs_api/modules/address/views/: address_view.py
mrs_api/modules/mrs_visit/controllers/: __init__.py  visit_controller.py
mrs_api/modules/mrs_visit/models/: __init__.py  visit_model.py
mrs_api/modules/mrs_visit/views/: __init__.py  visit_view.py
mrs_api/modules/patient/controllers/: __init__.py  patient_controller.py
mrs_api/modules/patient/models/: __init__.py  patient.py  patient_model.py  title_model.py
mrs_api/modules/patient/views/: __init__.py  patient_view.py  title_view.py
mrs_api/services/: __init__.py  base.py  engine.py  lifesparn.py  odoo.py  session.py
tests/env/: __init__.py  test_settings.py
tests/services/: test_engine.py
